[gd_scene load_steps=11 format=2]

[ext_resource path="res://NixLib/Shoot/ShootTarget.gd" type="Script" id=1]
[ext_resource path="res://TopDownShootGame/Projectile/Shell1.tscn" type="PackedScene" id=2]
[ext_resource path="res://TopDownShootGame/Tower/Tower.gd" type="Script" id=3]
[ext_resource path="res://TopDownShootGame/Image/TowerBase/barricadeMetal.png" type="Texture" id=4]
[ext_resource path="res://TopDownShootGame/Image/Turrent/specialBarrel2_outline.png" type="Texture" id=5]
[ext_resource path="res://NixLib/Common/Sight.gd" type="Script" id=6]
[ext_resource path="res://NixLib/Common/UnitLife.gd" type="Script" id=7]
[ext_resource path="res://TopDownShootGame/Common/Explosive.tscn" type="PackedScene" id=8]
[ext_resource path="res://NixLib/Common/Effect2DGenerator.gd" type="Script" id=9]

[sub_resource type="CircleShape2D" id=1]

[node name="Tower" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Shoot" type="Node2D" parent="."]
script = ExtResource( 1 )
projectile = ExtResource( 2 )
fires = [ NodePath("Fire") ]

[node name="Fire" type="Node2D" parent="Shoot"]
position = Vector2( 20, 0 )

[node name="specialBarrel1" type="Sprite" parent="Shoot"]
position = Vector2( 5, 0 )
rotation = -1.57079
texture = ExtResource( 5 )

[node name="ViewRange2D" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="UnitLife" type="Node" parent="."]
script = ExtResource( 7 )
maxLife = 5

[node name="Effect2D" type="Node2D" parent="."]
script = ExtResource( 9 )
efx = ExtResource( 8 )
[connection signal="body_entered" from="ViewRange2D" to="." method="_on_ViewRange2D_body_entered"]
[connection signal="body_exited" from="ViewRange2D" to="." method="_on_ViewRange2D_body_exited"]
[connection signal="dead" from="UnitLife" to="." method="_on_UnitLife_dead"]
